tests/codegen/fail/object/derive_no_fields.rs
use juniper::GraphQLObject;

#[derive(GraphQLObject)]
struct Obj {}

fn main() {}
