tests/codegen/fail/object/derive_no_fields.stderr
error: GraphQL object must have at least one field
 --> fail/object/derive_no_fields.rs:4:1
  |
4 | struct Obj {}
  | ^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/October2021#sec-Objects
